[package]
name = "tasksd"
version = "0.1.2"
edition = "2021"

[dependencies]
taskscheduler = { git = "https://git.joepigott.dev/pigroy/taskscheduler.git" }
piglog = { git = "https://git.joepigott.dev/pigroy/piglog.git" }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
serde = "1.0.217"
serde_json = "1.0.137"
