[package]
name = "tasksd"
authors = ["Joe Pigott <joe@joepigott.dev>"]
description = "A server for `taskscheduler` the smart todo list"
version = "0.1.2"
edition = "2021"

[dependencies]
taskscheduler = { git = "https://github.com/joepigott/taskscheduler.git" }
piglog = { git = "https://git.joepigott.dev/pigroy/piglog.git" }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "signal"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.137"
toml = "0.9.4"

[features]
https = ["taskscheduler/https"]
